--- a/style.css
+++ b/style.css
@@ -33,6 +33,8 @@ body{
 
  /* ATALHO */
  background: var(--bg-url)  no-repeat top center/cover;
+
+ height: 100vh;
 }
 
 body *{
@@ -172,4 +174,16 @@ footer{
     padding: 24px 0px;
     text-align: center;
     font-size: 14px;
+}
+
+/* media queries */
+@media (min-width: 700px){
+
+    :root{
+        --bg-url: url(./assets/bg-desktop.jpg);
+    }
+
+    .light{
+        --bg-url: url(./assets/bg-desktop-light.jpg);
+        }
 }
