--- a/style.css
+++ b/style.css
@@ -89,11 +89,17 @@ body *{
     position: absolute;
     z-index: 1;
     transform: translateY(-50%);
+
+    animation: slide-back 0.3s;
+}
+
+#swith button:hover{
+    outline: 8px solid var(--highlight-color);
+
 }
 
 .light #swith button{
-    right: 0;
-    left: initial;
+    animation: slide-in 0.3s forwards;
 }
 
 #swith span{
@@ -186,4 +192,28 @@ footer{
     .light{
         --bg-url: url(./assets/bg-desktop-light.jpg);
         }
+}
+
+/* Animation */
+
+@keyframes slide-in{
+
+    from{
+        left: 0;
+    }
+
+    to{
+        left: 50%;
+    }
+}
+
+@keyframes slide-back{
+    
+    from{
+        left: 50%;
+    }
+
+    to{
+        left: 0;
+    }
 }
